<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FF000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="left"
            android:layout_weight="1">
            <TextView
                android:id="@+id/image_title"
                android:text="@string/test_image_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/holo_green_light"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pubDate"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:paddingBottom="10dp"
                android:textSize="12sp"
                android:text="@string/test_image_date"
                android:textColor="@android:color/darker_gray"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center_vertical"
            android:layout_marginTop="5dp">
            <Button style="?android:attr/buttonBarButtonStyle"
                android:text="@string/refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#555555"
                android:onClick="onRefresh"/>
            <Button style="?android:attr/buttonBarButtonStyle"
                android:text="@string/setWallpaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ff0000"
                android:onClick="onSetWallpaper"/>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:adjustViewBounds="true"
                android:maxHeight="400dp"
                android:contentDescription="@string/image"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/image" />

            <TextView
                android:id="@+id/imageDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_light"
                android:text="@string/test_image_description"
                android:textSize="14sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>